tests/input/conf/invalid/invalid3.cnf
[server]
port = 53

[zone]
name = abc
path = input/zones/valid/abc.zone
